# Chat-App

./: Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: django-ci.yml
Docker/: docker-compose.yml
chat/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_chatgroup_users_online.py  0003_chatgroup_is_private_chatgroup_members_and_more.py  0004_chatgroup_admin_chatgroup_groupchat_name_and_more.py  0005_groupmessage_file_alter_chatgroup_group_name_and_more.py
chat/templates/chat/: chat.html  chat_message.html
chat/templates/chat/partials/: chat_message_p.html  modal_chat_leave.html  online_count.html  online_status.html
core/: admin.py
core/management/commands/: init_data.py
mainProject/: asgi.py  debug.py  urls.py
mainProject/settings/: common.py  dev.py  pro.py
templates/: base.html
templates/includes/: header.html
users/templates/users/: profile.html
