[project]
name = "chat-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3==1.35.76",
    "celery>=5.6.0",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-allauth>=65.13.1",
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.27.0",
    "django-redis>=6.0.0",
    "django-storages[s3]==1.14.4",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.3",
    "dotenv>=0.9.9",
    "drf-yasg>=1.21.11",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
    "shortuuid>=1.0.13",
    "social-auth-app-django>=5.6.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "django-silk>=5.4.3",
    "flower>=2.0.1",
    "locust>=2.42.6",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "pytest-watch>=4.2.0",
]

[tool.setuptools.packages.find]
# Explicitly list the Python packages (your Django apps + project folder)
include = ["mainProject*", "chat*", "core*", "users*"]

# Explicitly exclude the non-Python folders
exclude = ["Docker", "media", "static", "templates", "staticfiles", "locustfiles", "node_modules"]
